	configure.options. Do not clear e.g. --datadir. Move call
	`CygbuildFileReadOptionsMaybe' after the libtool check.
	(CygbuildCmdInstallMain): Move postinstall call to end.
	(CygbuildInstallFixEtcdirInstall): Support test mode.
	(CygbuildInstallFixDocdirInstall): Support test mode. Fix
	nasty bug where variables weremixed up with the environment.

	* etc/template/package.README (Build instructions): Change
	<PKG>-<VER>-<REL>-src to more generic <PKG>-*-src

	* bin/cygbuild.pl (Package): Delete trailing slash from 'package-'
	name.
	(ReadmeFix): Don't call ReadMeFilesIncluded().

2008-02-14  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::Packaging commands::publish): Document
	new PACKAGE argument sent to external publish command.

	* bin/cygbuild.sh: (CygbuildMakefilePrefixIsStandard): New.
	(CygbuildMakefileRunInstallCygwinOptions): Use
	`CygbuildMakefilePrefixIsStandard' and change automatically
	to PREFIX if prefix= is not detected.
	(CygbuildCmdReadmeFixFile): Adjust message display only
	in verbose mode.
	(CygbuildMakefileRunInstall): Remove debug `exit' calls.
	(CygbuildPatchListDisplay): Remove unnecessary `cat'. Add sort -u.
	(CygbuildCommandMain): Add alias `pcheck'
	(CygbuildVersionInfo): Improve parsing packages like
	foo_0.4.0-test5
	(CygbuildCmdPublishSignature): Delete trailing slash from
	input arg `dest'.
	(CygbuildCmdPublishExternal): Send $PKG to external publish
	program.
	(CygbuildReadmeReleaseMatchCheck): Improve release check.
	(CygbuildMakefileRunInstall): check PREFIX for Makefiles.
	(CygbuildMakefileRunInstallCygwinOptions): Change input argument
	`pfx' to accept raw syntax `prefix=<value>'.
	(CygbuildMakeRunInstallFixPerlPostinstall): Add PKG to
	.postinstall_append to make the file unique.
	(CygbuildCmdInstallCheckSetupHintQuotes): New.
	(CygbuildCmdInstallCheckSetupHintMain): Use
	`CygbuildCmdInstallCheckSetupHintQuotes'.
	(CygbuildMakefileRunInstallCygwinOptions): Display
	make command if option -v is set.